--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,16 @@
+body {
+  background-color: #DEDEDE
+}
 :root {
   --dark: #333;
   --light: #DDD;
 }
+
 nav, footer {
   margin: 1em 0;
   padding: 1em 0;
+  display: flex;
+  justify-content: space-between;
   background-color: var(--dark);
   color: var(--light);
 }
