--- a/css/style.css
+++ b/css/style.css
@@ -3,12 +3,16 @@
   --light: #DDD;
 }
 
+body{
+  background-color: #404040
+}
+
 nav, footer {
   margin: 1em 0;
   padding: 1em 0;
   display: flex;
   justify-content: space-between;
-  background-color: var(--dark);
+  background-color: #404040;
   color: var(--light);
 }
 .gallery {
@@ -27,6 +31,7 @@ nav, footer {
 }
 .card {
   border: 2px solid black;
+  padding-top: 20px;
   padding-left: .5em;
   padding-right: .5em;
   border-radius: 6px;
