--- a/css/style.css
+++ b/css/style.css
@@ -31,11 +31,13 @@ nav, footer {
 }
 .card {
   border: 2px solid black;
-  padding-top: 20px;
-  padding-left: .5em;
-  padding-right: .5em;
+  padding: 1em;
   border-radius: 6px;
   box-shadow: 2px 2px 10px rgba(0,0,0,0.25);
+  background-color: #DEDEDE
+}
+.card-img {
+  border-radius: 6px;
 }
 {box-sizing:border-box}
 .slideshow {
